# Bootcamp

./: README.md
Bootcamp/: README.md  daily_log.md
Bootcamp/dataflow-framework/: FINAL.md  README.md  example.sql
Bootcamp/doctools/: README.md
Bootcamp/figure-config-extraction/: README.md  setup.md
Bootcamp/language-drills/: README.md
Bootcamp/language-drills/basic-drills/: pyproject.toml
Bootcamp/language-drills/basic-drills/helloworld/: _default_config.yaml  config.py  sayhello.py
Bootcamp/language-drills/basic-drills/many_hellos/: __init__.py  main.py
Bootcamp/persistence-drills/: README.md  person.pkl  store.db  users.db
DOC/mydocs/: README.md  googledocs_to_markdown.md  index.md  mermmaid.md  mydocs.yml
Day 0/: License  README.md  cli.py  hello.py  main.py
Day 2/Section 1_core_python/: README.md
Day 2/Section2_Idioms/: README.md
Day 2/Section3 OOD/: README.md
Day 2/Section4 Functional_tools/: README.md
Day 2/Section5 Standard_library/: README.md
Day 2/Section6 Data Validation and Code Clarity/: README.md
Day 2/Section7 Performance and debugging/: README.md
Day-3/abstraction-level-3/: README.md  core.py  main.py  output.txt
Day1-Docs/: Basic_marksheet.md  dailylog.md  index.md.txt
Day4/: Final.md.txt  README_friday.md  basic.py  input.txt  level0.md.txt  level1.md.txt
ex-basics-2/: pyproject.toml
ex-basics-2/shravya_hello.egg-info/: PKG-INFO  SOURCES.txt
ex-basics-3/: pyproject.toml
ex-basics-3/mycli.egg-info/: entry_points.txt
figure-config/: Makefile  config.yaml  dockerfile  pmcids.txt  requirements.txt
(+513 files in other folders)
