[project]
name = "shravya-hello"
version = "0.1.0"
description = "A hello CLI with Rich and Typer"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
shravya-hello = "shravya_hello.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
